WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193030
[MSVC] error C2381: 'WebKit::NetworkHTTPSUpgradeChecker::~NetworkHTTPSUpgradeChecker': redefinition; '__declspec(noreturn)' or '[[noreturn]]' differs
https://bugs.webkit.org/show_bug.cgi?id=193030
Summary
[MSVC] error C2381: 'WebKit::NetworkHTTPSUpgradeChecker::~NetworkHTTPSUpgrade...
Fujii Hironori
Reported
2018-12-24 22:53:39 PST
[MSVC] error C2381: 'WebKit::NetworkHTTPSUpgradeChecker::~NetworkHTTPSUpgradeChecker': redefinition; '__declspec(noreturn)' or '[[noreturn]]' differs WinCairo MSVC Debug builds are failing to build.
https://build.webkit.org/builders/WinCairo%2064-bit%20WKL%20Debug%20%28Build%29/builds/5276
> C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\NetworkProcess/NetworkHTTPSUpgradeChecker.cpp(82): error C2381: 'WebKit::NetworkHTTPSUpgradeChecker::~NetworkHTTPSUpgradeChecker': redefinition; '__declspec(noreturn)' or '[[noreturn]]' differs > c:\webkit-buildworker\wincairo-wkl-debug\build\source\webkit\networkprocess\NetworkHTTPSUpgradeChecker.h(48): note: see declaration of 'WebKit::NetworkHTTPSUpgradeChecker::~NetworkHTTPSUpgradeChecker'
Attachments
Patch
(3.88 KB, patch)
2018-12-24 23:00 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Try EWS
(4.54 KB, patch)
2018-12-26 17:27 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.61 KB, patch)
2018-12-26 19:16 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-12-24 23:00:52 PST
Created
attachment 358054
[details]
Patch
Ross Kirsling
Comment 2
2018-12-26 11:42:32 PST
Comment on
attachment 358054
[details]
Patch I added that #if and comment here as a WinCairo Debug build fix here, because it was very tricky to avoid breaking Cocoa Debug in the process:
https://bugs.webkit.org/show_bug.cgi?id=192482#c15
Looks like this issue is coming up again with the removal of ENABLE_HTTPS_UPGRADE in
r239474
(
bug 192937
):
https://trac.webkit.org/changeset/239474/webkit
Your fix is certainly much more satisfying than mine was, and I think if Mac Debug EWS isn't complaining, we should be safe. Yay!
Fujii Hironori
Comment 3
2018-12-26 17:22:39 PST
I didn't check that. It looks pretty weird.
Fujii Hironori
Comment 4
2018-12-26 17:27:30 PST
Created
attachment 358089
[details]
Try EWS
Fujii Hironori
Comment 5
2018-12-26 18:34:32 PST
Hmm, mac-debug-ews says "Passed tests". Weird.
Chris Dumez
Comment 6
2018-12-26 18:47:04 PST
Comment on
attachment 358089
[details]
Try EWS View in context:
https://bugs.webkit.org/attachment.cgi?id=358089&action=review
> Source/WebKit/UIProcess/WebPageProxy.h:1571 > + NO_RETURN_DUE_TO_ASSERT void didFailToSuspendAfterProcessSwap();
This caused a lot of crashes last time around. Nothing has changed since AFAICT so this will very likely cause the same crashes in wk2 debug (no ews).
Chris Dumez
Comment 7
2018-12-26 18:53:30 PST
Comment on
attachment 358089
[details]
Try EWS View in context:
https://bugs.webkit.org/attachment.cgi?id=358089&action=review
> Source/WebKit/NetworkProcess/NetworkHTTPSUpgradeChecker.h:48 > + NO_RETURN_DUE_TO_ASSERT ~NetworkHTTPSUpgradeChecker();
This part of the change will likely be fine (iirc the crashes were in IPC related code and this is not called via IPC). However, I’d leave the WebPageProxy changes out as they did not work last time Ross tried them.
Fujii Hironori
Comment 8
2018-12-26 19:09:02 PST
Thank you for the comments. I'm going to land the patch withou IPC part changes.
Fujii Hironori
Comment 9
2018-12-26 19:16:52 PST
Created
attachment 358093
[details]
Patch for landing
Fujii Hironori
Comment 10
2018-12-26 20:02:21 PST
Comment on
attachment 358093
[details]
Patch for landing Clearing flags on attachment: 358093 Committed
r239555
: <
https://trac.webkit.org/changeset/239555
>
Fujii Hironori
Comment 11
2018-12-26 20:02:24 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12
2018-12-26 20:03:23 PST
<
rdar://problem/46955123
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug